# discord_bot

./: README.md  pyproject.toml
discord_bot/arxiv/: arxivbot.py  db.py  models.py
discord_bot/gpt/: gptbot.py
discord_bot/youtube/: models.py  youtubebot.py
